# Zephyr_project

./: CMakeLists.txt  README.md  my_robot_hardware_plugin.xml  package.xml
config/: bridge_config.yaml  controllers.yaml  ekf.yaml
controller/: my_robot_controller.cpp
controller/include/jaeger_model/: my_robot_controller.hpp
hardware/: my_robot_hardware.cpp
hardware/include/jaeger_model/: my_robot_hardware.hpp
imu_bmp_pub/: package.xml  setup.cfg  setup.py
imu_bmp_pub/config/: ekf_imu.yaml
imu_bmp_pub/imu_bmp_pub/: dual_pwm_sweep.py  node.py  pwm_and_valves.py  valve_teleop.py
imu_bmp_pub/launch/: imu_stack.launch.py  pwm_ctrl_proof.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/share/jaeger_model/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/share/jaeger_model/cmake/: jaeger_modelConfig.cmake
install/share/jaeger_model/launch/: ekf.launch.py
install/share/jaeger_model/meshes/: prop3.STL  thrust1.STL  thrust3.STL  thrust6.STL
install/share/jaeger_model/src/: hello_world.cc  hello_world.hh
install/share/jaeger_model/urdf/: jaeger_compl.urdf.xacro  jaeger_model.urdf
install/share/jaeger_model/worlds/: empty.sdf
jaeger_model/: CMakeLists.txt  package.xml
jaeger_model/config/: controllers.yaml
jaeger_model/controller/: my_robot_controller.cpp
jaeger_model/controller/include/jaeger_model/: my_robot_controller.hpp
jaeger_model/hardware/: my_robot_hardware.cpp
jaeger_model/hardware/include/jaeger_model/: my_robot_hardware.hpp
jaeger_model/launch/: basic_jaeger.launch.py
jaeger_model/src/: gpiod_link_node.cpp
jaeger_model/urdf/: jaeger_robot.urdf.xacro
launch/: basic_jaeger.launch.py
log/: latest_build
meshes/: base_link.STL  base_link2.STL  boquilla_salida.STL  boquilla_salida1.STL  boquilla_salida2.STL  boquilla_salida3.STL  boquilla_salida4.STL  prop1.STL  prop2.STL  prop4.STL  thrust2.STL  thrust4.STL  thrust5.STL
rpi5_gpio_control/: CMakeLists.txt  package.xml  rpi5_gpio_control.xml
rpi5_gpio_control/config/: valve_controller.yaml
rpi5_gpio_control/include/rpi5_gpio_control/: rpi5_forward_system.hpp  rpi5_valve_controller.hpp
rpi5_gpio_control/launch/: bringup.launch.py
rpi5_gpio_control/src/: rpi5_forward_system.cpp  rpi5_valve_controller.cpp
rpi5_gpio_control/urdf/: robot.urdf
rpi_gpio_blink/: package.xml  setup.cfg  setup.py
rpi_gpio_blink/rpi_gpio_blink/: blink_bcm4.py
src/: hello_world.cc  hello_world.hh
urdf/: Ensamblaje_base2.urdf  ensam1_tesis.SLDASM.csv  jaeger_compl.urdf.xacro  jaeger_model.urdf  modelo_tesis.urdf.xacro
worlds/: Ensamblaje base2.csv  empty.sdf
